Closed Bug 443455 Opened 16 years ago Closed 16 years ago

crash in nsMenuX::OnCreate()

Categories

(Core :: Widget: Cocoa, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

References

()

Details

(Keywords: fixed1.9.0.2)

Attachments

(3 files)

mozilla/widget/src/cocoa/nsMenuX.mm:757

This is one of our top crashes in menu code.
Flags: wanted1.9.1+
Flags: wanted1.9.0.x+
Attachment #327999 - Flags: review?(smichaud)
Comment on attachment 327999 [details] [diff] [review]
fix v1.0 for 1.9.1

This looks fine to me.  It makes sense that it would fix crashes.
Attachment #327999 - Flags: review?(smichaud) → review+
Attachment #327999 - Flags: superreview?(roc)
Attachment #327999 - Flags: superreview?(roc) → superreview+
Priority: -- → P1
landed on trunk
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Attachment #328000 - Flags: approval1.9.0.2?
Whiteboard: [needs baking]
Comment on attachment 328000 [details] [diff] [review]
fix v1.0 for 1.9.0

Approved for 1.9.0.2. Please land in CVS. a=ss
Attachment #328000 - Flags: approval1.9.0.2? → approval1.9.0.2+
landed on cvs trunk
Keywords: fixed1.9.0.2
Whiteboard: [needs baking]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: