fix crash in nsMenuX::OnCreate(). b=443455 r=smichaud sr=roc